<?xml version="1.0"?>
<package>
  <name>criros</name>
  <version>0.0.0</version>
  <description>The criros package</description>

  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">https://github.com/crigroup/criros</url>
  <url type="bugtracker">https://github.com/crigroup/criros/issues</url>
  <url type="repository">https://github.com/crigroup/criros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>

  <run_depend>image_geometry</run_depend>
  <run_depend>python_orocos_kdl</run_depend>
  <run_depend>python-tabulate</run_depend>
  <run_depend>python-termcolor</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>

</package>
